Add GitRequest Sample

--- a/src/css/style.module.css
+++ b/src/css/style.module.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+body{
+    background: linear-gradient(45deg, rgb(205, 112, 236),rgb(112, 149, 205),rgba(110, 110, 244, 0.421),rgba(224, 95, 95, 0.322),rgba(0, 128, 0, 0.173),rgba(255, 255, 0, 0.208),white);
+}
+
 .div_module{
     background-color: rgb(72, 255, 0);
     width: 100px;
@@ -7,10 +11,6 @@
     border-radius: 50%;
     text-align: center;
 }
-body{
-    background-color: rgb(205, 112, 236);
-}
-
 .div_module2{
     background-color: rgb(36, 36, 36);
     width: 100px;
